Graficos, documentacion, insercion y porcentajeLlenado modificados